--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/js"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.12.11",
     "autoprefixer": "9.8.6",
     "babel-eslint": "^10.1.0",
